hopefully fixed hover problem on mobile and changed time between chords

--- a/style.css
+++ b/style.css
@@ -40,8 +40,11 @@ body {
     border-radius: 15px;
     opacity: 1.0;
 }
-.selectButton:hover {
-    background-color: rgb(145, 144, 144);
+
+@media (hover: hover) {
+    .selectButton:hover {
+        background-color: rgb(145, 144, 144);
+    }
 }
 
 
